<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:fontFamily="serif-monospace"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/whatsapp2anyone"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"

            />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_number"
                    android:inputType="number"
                    android:textColor="@color/cardview_dark_background" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
                <EditText
                    android:id="@+id/main_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_message"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="2"
                    android:scrollbars="vertical"
                    android:textColor="@color/cardview_dark_background" />
                </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send1"
            android:background="@drawable/buttonbackground"
            android:textColor="#1A95B2"
            android:textAlignment="center"/>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/recent_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbackground"
            android:text="@string/recent_statuses"
            android:textColor="#1A95B2"
            android:textAlignment="center"/>
        <Button
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saved_status"
            android:background="@drawable/buttonbackground"
            android:text="@string/saved_status"
            android:textColor="#1A95B2"
            android:textAlignment="center"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLayout"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:background="@android:color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            tools:ignore="UselessParent">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:id="@+id/web"
                app:srcCompat="@drawable/home"
                android:contentDescription="@string/web" />
            <ImageButton
                android:layout_width="0dp"
                android:id="@+id/rate"
                android:background="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star"
                android:contentDescription="@string/rate" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>